--- a/auction.html
+++ b/auction.html
@@ -25,7 +25,7 @@
      
     <div id="content">
         <h1>Auction</h1>
-        <p>For my little robot thing cause wade wanted me to.</p>
+        <p>sup babie boys-uwu</p>
         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfCsKQYLqmphJZqNJfP8k3wDaUpcPefjb-mUtAyNw5qmuRljw/viewform?embedded=true" width="640" height="554" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
         
     </div>
