--- a/home.html
+++ b/home.html
@@ -37,8 +37,8 @@
 <script>
     document.getElementById("admin-btn").addEventListener("click", function() {
         let code = prompt("Enter code:");
-        if (code === "bruh123") {
-            window.location.href = "auction.html";
+        if (code === "Reload") {
+            window.location.href = "home.html";
         } else if (code !== null) {
             alert("Incorrect code!");
         }
