--- a/events.html
+++ b/events.html
@@ -24,9 +24,7 @@
 
      
     <div id="content">
-        <h1>CanItouchU</h1>
-        <p>sup babie boys-uwu</p>
-        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfCsKQYLqmphJZqNJfP8k3wDaUpcPefjb-mUtAyNw5qmuRljw/viewform?embedded=true" width="640" height="554" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+        <h1>No Active events</h1>
         
     </div>
 
