--- a/home.html
+++ b/home.html
@@ -32,6 +32,7 @@
             
             <p>Feel free to explore. The chat feature has not yet been implemented, so go here to chat:</p>
             <a href="chat.html" class="link">Chat</a><br>
+            <a href="test.py" class="link">Sign In Test</a><br>
             <button id="admin-btn">Admin Panel</button>
 
 <script>
