--- a/chat.html
+++ b/chat.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Blackout | Main Chat</title>
+  <title>BLACKOUT | Main Chat</title>
   <script src="https://cdn.ably.io/lib/ably.min-1.js"></script>
   <link rel="stylesheet" href="styles.css">
 </head>
