--- a/links.html
+++ b/links.html
@@ -78,7 +78,9 @@
             <a href="http://gjprrpqpuk.meatbytes.com" class="link">Link 12</a><br>
             <a href="http://dashboard-no.2.fluxus.org" class="link">Link 13</a><br>
             <a href="http://mariachi.viajesflores.com" class="link">Link 14</a><br>
-
+            <a href="http://output.elprado.com.ar" class="link">Link 14</a><br>
+            <a href="http://data.recycle.com.ar" class="link">Link 14</a><br>
+    
             <h3>Pizza Edition</h3>
             <a href="https://data.abatek.com" class="link">Link 1</a><br>
             <a href="https://urfunny.bot.nu" class="link">Link 2</a><br>
