--- a/links.html
+++ b/links.html
@@ -78,14 +78,17 @@
             <a href="http://gjprrpqpuk.meatbytes.com" class="link">Link 12</a><br>
             <a href="http://dashboard-no.2.fluxus.org" class="link">Link 13</a><br>
             <a href="http://mariachi.viajesflores.com" class="link">Link 14</a><br>
-            <a href="http://output.elprado.com.ar" class="link">Link 14</a><br>
-            <a href="http://data.recycle.com.ar" class="link">Link 14</a><br>
+            <a href="http://output.elprado.com.ar" class="link">Link 15</a><br>
+            <a href="http://data.recycle.com.ar" class="link">Link 16</a><br>
+            <a href="http://customer.elcaenwa.org" class="link">Link 17</a><br>
+            <a href="http://policy.biquest.cl" class="link">Link 18</a><br>
     
             <h3>Pizza Edition</h3>
-            <a href="https://data.abatek.com" class="link">Link 1</a><br>
+            <a href="https://pizzamarbles913.tinosmarble.com" class="link">Link 1</a><br>
             <a href="https://urfunny.bot.nu" class="link">Link 2</a><br>
             <a href="https://pizzaedition.realmzer.xyz" class="link">Link 3</a><br>
-        </section>
+            <a href="https://low-taper-fade.thefloweremedy.com" class="link">Link 4</a><br>
+            <a href="https://googlemaps.gpsdata.ru" class="link">Link 5</a><br>
     </div>
 
     <script>
