--- a/Resources/updates.html
+++ b/Resources/updates.html
@@ -62,8 +62,7 @@
                 Catsbedabest: the schedule for the month of april and beyond is out<br>
                 Catsbedabest: we now have pages for every element of the site, as well as designs and future sites, where you can see what is coming after blackout as well as potential logos for all of the catsbedabest productions sites<br>
                 Catsbedabest: another massive reorganization. i hope you enjoy<br>
-                Catsbedabest: we now have both AI Links and Reports out<br>
-                h more websites coming soon<br>
+                Catsbedabest: we now have both AI Links and Reports out more<br>
 </p>
         </section>
     </div>
