--- a/home.html
+++ b/home.html
@@ -30,7 +30,7 @@
             
                 <h1>BLACKOUT</h1>
             
-            <p>Feel free to explore. The chat feature has not yet been implemented, so go here to chat:</p>
+            <p>Hello all Blackout users and staff. The chat is still in BETA, but you can navigate to it using the button below :</p>
             <a href="chat.html" class="link">Chat</a><br>
             <a href="test.py" class="link">Sign In Test</a><br>
             <button id="admin-btn">Admin Panel</button>
