--- a/burping.html
+++ b/burping.html
@@ -1,1 +1,9 @@
-html.document
+<!DOCTYPE html>
+<html>
+  <head>
+    <title> I Like Burping </title>
+  </head>
+  <body>
+    <h1> I Like Burping </h1>
+  </body>
+</html>
