--- a/events.html
+++ b/events.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Auction</title>
+    <title>Blackout | Blackout Opening Event</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
