--- a/home.html
+++ b/home.html
@@ -41,7 +41,7 @@
         if (code === "Reload") {
             window.location.href = "home.html";
         } else if (code !== null) {
-            alert("Incorrect code!");
+            alert("Nice Try Loser!");
         }
     });
 </script>
