--- a/test.html
+++ b/test.html
@@ -1,30 +1,33 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Blackout Login</title>
+    <meta charset="UTF-8">
+  <title>Blackout Sign In</title>
 </head>
 <body>
-  <input type="password" id="password" placeholder="Enter password" />
-  <button onclick="checkPassword()">Submit</button>
+  <input type="password" id="password1" placeholder="Password" /><br>
+  <input type="username" id="password2" placeholder="Username" /><br>
+  <button onclick="checkPasswords()">Submit</button>
   <p id="result"></p>
 
   <script>
-    // password: username pairs
-    const users = {
-      "hunter2": "Alice",
-      "swordfish": "Bob",
-      "redstone42": "Steve"
+    const userCombos = {
+      "hunter2|redstone42": "Alice",
+      "swordfish|bedrock99": "Bob"
     };
 
-    function checkPassword() {
-      const input = document.getElementById("password").value;
-      const username = users[input];
+    function checkPasswords() {
+      const p1 = document.getElementById("password1").value;
+      const p2 = document.getElementById("password2").value;
+      const comboKey = `${p1}|${p2}`;
 
+      const username = userCombos[comboKey];
       const result = document.getElementById("result");
+
       if (username) {
         result.textContent = `Welcome, ${username}!`;
       } else {
-        result.textContent = "Invalid password.";
+        result.textContent = "Incorrect Username or password";
       }
     }
   </script>
