--- a/test.html
+++ b/test.html
@@ -6,8 +6,8 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <input type="password" id="password" placeholder="Password" /><br>
-  <input type="username" id="username" placeholder="Username" /><br>
+  <input type="password" id="password-input" placeholder="Password" /><br>
+  <input type="username" id="username-input" placeholder="Username" /><br>
   <button onclick="checkPasswords()">Submit</button>
   <p id="result"></p>
 
