--- a/resources.html
+++ b/resources.html
@@ -13,21 +13,20 @@
         <ul>
             <li><a href="home.html">Home</a></li>
             <li><a href="resources.html">Resources</a></li>
-            <li><a href="schedule.html">Schedule</a></li>
-            <li><a href="suggestions.html">Suggestions</a></li>
-            <li><a href="newsletter.html">Newsletter</a></li>
+            <li><a href="information.html">Information</a></li>
             <li><a href="links.html">Links</a></li>
             <li><a href="ai.html">AI</a></li>
             <li><a href="help.html">Help</a></li>
         </ul>
     </div>
 
-    <a href="Resources/updates.html"><button>Updates</button></a>
-    <a href="Resources/schedule.html"><button>Schedule</button></a>
-    <a href="Resources/suggestions.html"><button>Suggestions</button></a>
-    <a href="Resources/reports.html"><button>Reports</button></a>
-    <a href="Resources/rankapplications.html"><button>Rank Applications</button></a>
-    <a href="Resources/newsletter.html"><button>Newsletter</button></a>
+    <a href="Resources/updates.html">Updates</a>
+    <a href="Resources/schedule.html">Schedule</a>
+    <a href="Resources/suggestions.html">Suggestions</a>
+    <a href="Resources/reports.html">Reports</a>
+    <a href="Resources/rankapplications.html">Rank Applications</a>
+    <a href="Resources/newsletter.html">Newsletter</a>
+    <a href="Resources/inviterequests.html">Invite Requests</a>
 
 
 </body>
