--- a/resources.html
+++ b/resources.html
@@ -4,8 +4,70 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blackout | Resources</title>
-    <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+    <!-- CSS Styles Embedded in the HTML File -->
+    <style>
+        /* Basic Reset */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        /* Body styling */
+        body {
+            display: flex;
+            min-height: 100vh;
+        }
+
+        /* Sidebar styling */
+        #sidebar {
+            width: 200px;
+            background-color: #333;
+            color: white;
+            padding: 20px;
+            position: fixed;
+            height: 100%;
+        }
+
+        #sidebar ul {
+            list-style-type: none;
+        }
+
+        #sidebar ul li {
+            margin-bottom: 10px;
+        }
+
+        #sidebar ul li a {
+            color: white;
+            text-decoration: none;
+        }
+
+        /* Content section styling */
+        #content {
+            margin-left: 220px;  /* Ensures it doesn't overlap the sidebar */
+            flex: 1;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            padding: 20px;
+        }
+
+        /* Links inside the content */
+        #content a {
+            text-decoration: none;
+            color: #333;
+            font-size: 18px;
+            margin: 10px 0;
+            transition: color 0.3s;
+        }
+
+        #content a:hover {
+            color: #007bff;
+        }
+    </style>
 </head>
 <body>
 
@@ -20,13 +82,14 @@
         </ul>
     </div>
 
-    <a href="Resources/updates.html">Updates</a><br>
-    <a href="Resources/schedule.html">Schedule</a><br>
-    <a href="Resources/suggestions.html">Suggestions</a><br>
-    <a href="Resources/reports.html">Reports</a><br>
-    <a href="Resources/rankapplications.html">Rank Applications</a><br>
-    <a href="Resources/inviterequests.html">Invite Requests</a><br>
-
+    <div id="content">
+        <a href="Resources/updates.html">Updates</a><br>
+        <a href="Resources/schedule.html">Schedule</a><br>
+        <a href="Resources/suggestions.html">Suggestions</a><br>
+        <a href="Resources/reports.html">Reports</a><br>
+        <a href="Resources/rankapplications.html">Rank Applications</a><br>
+        <a href="Resources/inviterequests.html">Invite Requests</a><br>
+    </div>
 
 </body>
 </html>
