--- a/resources.html
+++ b/resources.html
@@ -8,69 +8,88 @@
 
     <!-- CSS Styles Embedded in the HTML File -->
     <style>
-        /* Basic Reset */
-        * {
+        /* Global Styles */
+        body {
+            font-family: Arial, sans-serif;
+            background-color: black;
+            color: orange;
             margin: 0;
             padding: 0;
-            box-sizing: border-box;
         }
 
-        /* Body styling */
-        body {
-            display: flex;
-            min-height: 100vh;
+        h1, p, h4 {
+            text-align: center;
+            text-shadow: 0 0 10px orange, 0 0 20px orange;
         }
 
-        /* Sidebar styling */
+        /* Sidebar Styles */
         #sidebar {
-            width: 200px;
-            background-color: #333;
-            color: white;
-            padding: 20px;
             position: fixed;
+            top: 0;
+            left: 0;
+            width: 250px;
             height: 100%;
+            background-color: #222;
+            box-shadow: 2px 0 10px rgba(0, 0, 0, 0.5);
+            padding-top: 20px;
+            overflow: auto;
         }
 
         #sidebar ul {
             list-style-type: none;
+            padding: 0;
+            margin: 0;
         }
 
         #sidebar ul li {
-            margin-bottom: 10px;
+            padding: 20px;
+            text-align: left;
         }
 
         #sidebar ul li a {
-            color: white;
+            color: orange;
             text-decoration: none;
-        }
-
-        /* Content section styling */
-        #content {
-            margin-left: 220px;  /* Ensures it doesn't overlap the sidebar */
-            flex: 1;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            padding: 20px;
-        }
-
-        /* Links inside the content */
-        #content a {
-            text-decoration: none;
-            color: #333;
             font-size: 18px;
-            margin: 10px 0;
-            transition: color 0.3s;
+            text-shadow: 0 0 10px orange, 0 0 20px orange;
+            display: block;
+            padding: 5px 0;
+        }
+
+        #sidebar ul li a:hover {
+            color: #ffcc00;
+            background-color: #333;
+        }
+
+        /* Content Styling */
+        #content {
+            margin-left: 250px;  /* Ensures it doesn't overlap the sidebar */
+            padding: 20px;
+            text-align: center;
+        }
+
+        #content a {
+            color: #e67e00;
+            text-decoration: none;
+            text-shadow: 0 0 10px orange, 0 0 20px orange;
+            display: inline-block;
+            text-align: center;
+            margin: 10px auto;
+            padding: 5px 0;
         }
 
         #content a:hover {
-            color: #007bff;
+            color: #cc6a00;
+        }
+
+        /* Additional Styling */
+        html, body {
+            height: 100%;
         }
     </style>
 </head>
 <body>
 
+    <!-- Sidebar Section -->
     <div id="sidebar">
         <ul>
             <li><a href="home.html">Home</a></li>
@@ -82,6 +101,7 @@
         </ul>
     </div>
 
+    <!-- Main Content Section -->
     <div id="content">
         <a href="Resources/updates.html">Updates</a><br>
         <a href="Resources/schedule.html">Schedule</a><br>
