Yeah, Will, I know it has CSS embedded in it, just trust me on this one

--- a/resources.html
+++ b/resources.html
@@ -32,6 +32,10 @@
             background-color: #222;
             box-shadow: 2px 0 10px rgba(0, 0, 0, 0.5);
             padding-top: 20px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center; /* Vertically center the links */
+            align-items: center; /* Horizontally center the links */
             overflow: auto;
         }
 
@@ -43,7 +47,7 @@
 
         #sidebar ul li {
             padding: 20px;
-            text-align: left;
+            text-align: center; /* Center the text in each list item */
         }
 
         #sidebar ul li a {
