I know this has CSS imbedded, but it works, so chill

--- a/resources.html
+++ b/resources.html
@@ -32,22 +32,21 @@
             background-color: #222;
             box-shadow: 2px 0 10px rgba(0, 0, 0, 0.5);
             padding-top: 20px;
-            display: flex;
-            flex-direction: column;
-            justify-content: center; /* Vertically center the links */
-            align-items: center; /* Horizontally center the links */
             overflow: auto;
+            display: flex;
+            justify-content: center; /* Horizontally center the container */
+            align-items: center; /* Vertically center the container */
         }
 
         #sidebar ul {
             list-style-type: none;
             padding: 0;
             margin: 0;
+            text-align: center; /* Center the text in the list items */
         }
 
         #sidebar ul li {
             padding: 20px;
-            text-align: center; /* Center the text in each list item */
         }
 
         #sidebar ul li a {
