--- a/resources.html
+++ b/resources.html
@@ -63,9 +63,9 @@
             background-color: #333;
         }
 
-        /* Content Styling */
+        /* Content Section Styles */
         #content {
-            margin-left: 250px;  /* Ensures it doesn't overlap the sidebar */
+            margin-left: 250px;  /* Keeps content to the right of the sidebar */
             padding: 20px;
             text-align: center;
         }
