--- a/resources.html
+++ b/resources.html
@@ -10,7 +10,7 @@
 <body>
 <h1>Resources</h1>
     <h2>Use the Sidebar to navigate between Resources</h2>
-    <h3> To get back to Home, click here: <a> href="home.html">Back to Home</a></h3>
+    <h3> To get back to Home, click here: <a href="home.html">Back to Home</a></h3>
     <div id="sidebar">
         <ul>
             <li><a href="Resources/updates.html">Updates</a></li>
