--- a/resources.html
+++ b/resources.html
@@ -9,8 +9,8 @@
 </head>
 <body>
 <h1>Resources</h1>
-    <h2>Use the Sidebar to navigate between Resources</h2>
-    <h3> To get back to Home, click here: <a href="home.html">Back to Home</a></h3>
+    <h2 style="text-align: center;">Use the Sidebar to navigate between Resources</h2>
+    <h3 style="text-align: center;">To get back to Home, click here: <a href="home.html">Back to Home</a></h3>
     <div id="sidebar">
         <ul>
             <li><a href="Resources/updates.html">Updates</a></li>
