--- a/404.html
+++ b/404.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <div class="error-page">
-        <h1>Oops!</h1>
-        <p>The page you're looking for cannot be found.</p>
+        <h1>Error!</h1>
+        <p>Unfortunately the page your looking for is either in devlopment, a bug, or a typo. Ask the Devs if you need help</p>
         <a href="index.html" class="home-link">Back to Home</a>
     </div>
 </body>
