--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@
 <body>
     <div class="error-page">
         <h1>Error!</h1>
-        <p>Unfortunately the page your looking for is either in devlopment, a bug, or a typo. Ask the Devs if you need help</p>
+        <p>Unfortunately the page your looking for is either in devlopment, a bug, or a typo. Please ask the Devs if you need help!</p>
         <a href="index.html" class="home-link">Back to Home</a>
     </div>
 </body>
