--- a/home.html
+++ b/home.html
@@ -22,7 +22,7 @@
         </ul>
     </div>
 
-    <img class="logo-fixed" src="https://github.com/The-dog-dude/Blackout/blob/main/Untitled%20design.png?raw=true" alt="Logo">
+    <img class="logo-fixed" src="file:///home/chronos/u-1b22043836ba091aa4191c2cda224f70792d5421/MyFiles/Future%20Websites.pdf" alt="Logo">
 
      
     <div id="content">
