--- a/home.html
+++ b/home.html
@@ -22,7 +22,7 @@
         </ul>
     </div>
 
-    <img class="logo-fixed" src="file:///home/chronos/u-1b22043836ba091aa4191c2cda224f70792d5421/MyFiles/Future%20Websites.pdf" alt="Logo">
+    <img class="logo-fixed" src="https://drive.google.com/file/d/1EzMRzUwWjxFYD_xbF9OxgQf8SHEwJjZB/view" alt="Logo">
 
      
     <div id="content">
