--- a/resources.html
+++ b/resources.html
@@ -10,9 +10,9 @@
 <body>
 <h1>Resources</h1>
     <h2 style="text-align: center;">Use the Sidebar to navigate between Resources</h2>
-    <h3 style="text-align: center;">To get back to Home, click here: <a href="home.html">Back to Home</a></h3>
-    <div id="sidebar">
         <ul>
+            <li><a href="home.html">Back to Home</a></li>
+            <li><a href="resources.html">Resources</a></li>
             <li><a href="Resources/updates.html">Updates</a></li>
             <li><a href="Resources/schedule.html">Schedule</a></li>
             <li><a href="Resources/suggestions.html">Suggestions</a></li>
