--- a/resources.html
+++ b/resources.html
@@ -10,6 +10,7 @@
 <body>
 <h1>Resources</h1>
     <h2 style="text-align: center;">Use the Sidebar to navigate between Resources</h2>
+        <div id="sidebar">
         <ul>
             <li><a href="home.html">Back to Home</a></li>
             <li><a href="resources.html">Resources</a></li>
