--- a/Resources/updates.html
+++ b/Resources/updates.html
@@ -10,8 +10,8 @@
 
     <div id="sidebar">
         <ul>
-            <li><a href="home.html">Back to Home</a></li>
-            <li><a href="resources.html">Resources</a></li>
+            <li><a href="Blackout/home.html">Back to Home</a></li>
+            <li><a href="Blackout/resources.html">Resources</a></li>
             <li><a href="Resources/updates.html">Updates</a></li>
             <li><a href="Resources/schedule.html">Schedule</a></li>
             <li><a href="Resources/suggestions.html">Suggestions</a></li>
