--- a/Resources/schedule.html
+++ b/Resources/schedule.html
@@ -10,14 +10,13 @@
 
     <div id="sidebar">
         <ul>
-            <li><a href="home.html">Home</a></li>
+            <li><a href="home.html">Back to Home</a></li>
             <li><a href="resources.html">Resources</a></li>
-            <li><a href="schedule.html">Schedule</a></li>
-            <li><a href="suggestions.html">Suggestions</a></li>
-            <li><a href="newsletter.html">Newsletter</a></li>
-            <li><a href="links.html">Links</a></li>
-            <li><a href="ai.html">AI</a></li>
-            <li><a href="help.html">Help</a></li>
+            <li><a href="Resources/updates.html">Updates</a></li>
+            <li><a href="Resources/schedule.html">Schedule</a></li>
+            <li><a href="Resources/suggestions.html">Suggestions</a></li>
+            <li><a href="Resources/reports.html">Reports</a></li>
+            <li><a href="Resources/rankapplications.html">Rank Applications</a></li>
         </ul>
     </div>
     
