--- a/Resources/reports.html
+++ b/Resources/reports.html
@@ -12,7 +12,7 @@
     <div id="sidebar">
         <ul>
             <li><a href="home.html">Back to Home</a></li>
-            <li><a href="resources.html">Resources</a></li>
+            <li><a href="./resources.html">Resources</a></li>
             <li><a href="./Resources/updates.html">Updates</a></li>
             <li><a href="Resources/schedule.html">Schedule</a></li>
             <li><a href="Resources/suggestions.html">Suggestions</a></li>
