--- a/resources.html
+++ b/resources.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <h1>Resources</h1>
-    <h2 style="text-align: center;">Use the Sidebar to navigate between Resources</h2>
+    <p>Use the Sidebar to navigate between Resources</p>
         <div id="sidebar">
         <ul>
             <li><a href="home.html">Back to Home</a></li>
