--- a/ai.html
+++ b/ai.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI</title>
+    <title>Blackout | AI</title>
     <link rel="stylesheet" href="styles.css">
   <script id="embedai" src="https://embedai.thesamur.ai/embedai.js" data-id="blackout-ai"></script>
 </head>
