--- a/Resources/resources404.html
+++ b/Resources/resources404.html
@@ -1,1 +1,16 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Page Not Found</title>
+    <link rel="stylesheet" href="styles.css"> 
+</head>
+<body>
+    <div class="error-page">
+        <h1>Error!</h1>
+        <p>Unfortunately the page your looking for is either in devlopment, a bug, or a typo. Please ask the Devs if you need help!</p>
+        <a href="index.html" class="home-link">Back to Home</a>
+    </div>
+</body>
+</html>
