--- a/404.html
+++ b/404.html
@@ -10,7 +10,7 @@
     <div class="error-page">
         <h1>Error!</h1>
         <p>Unfortunately the page your looking for is either in devlopment, a bug, or a typo. Please ask the Devs if you need help!</p>
-        <a href="index.html" class="home-link">Back to Home</a>
+        <a href="home.html" class="home-link">Back to Home</a>
     </div>
 </body>
 </html>
