--- a/information.html
+++ b/information.html
@@ -1,1 +1,25 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Blackout | Information</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+</head>
+<body>
+<h1>Information</h1>
+    <p>Use the Sidebar to navigate between Blakout Information</p>
+        <div id="sidebar">
+        <ul>
+            <li><a href="home.html">Back to Home</a></li>
+            <li><a href="information.html">Information</a></li>
+            <li><a href="Information/partners.html">Partners</a></li>
+            <li><a href="Information/seasons.html">Seasons</a></li>
+            <li><a href="Information/ranks.html">Ranks</a></li>
+            <li><a href="Resources/punishments.html">Punishments</a></li>
+            <li><a href="Resources/FAQ.html">FAQ</a></li>
+        </ul>
+    </div>
+</body>
+</html>
