--- a/information.html
+++ b/information.html
@@ -17,8 +17,8 @@
             <li><a href="Information/partners.html">Partners</a></li>
             <li><a href="Information/seasons.html">Seasons</a></li>
             <li><a href="Information/ranks.html">Ranks</a></li>
-            <li><a href="Resources/punishments.html">Punishments</a></li>
-            <li><a href="Resources/FAQ.html">FAQ</a></li>
+            <li><a href="Information/punishments.html">Punishments</a></li>
+            <li><a href="Information/FAQ.html">FAQ</a></li>
         </ul>
     </div>
 </body>
