--- a/Information/partners.html
+++ b/Information/partners.html
@@ -22,12 +22,16 @@
         </ul>
     </div>
 
+    <div>
+    <center>
     <h1>Partners</h1>
-    <center><p><ul>
+    <p><ul>
     <li><a href="https://docs.google.com/document/d/1ix9IhNoRGtXVx01Gr9sHXHeJN76wNzLcV7ygujgGs3I/edit?tab=t.ruabefcy9425">Lunar (The Chat)</a></li>
     <li><a href="https://docs.google.com/document/u/0/d/1HglxTUccNO7PPUPPtLnBzGx7Vp8n9w8d4Q0bXsm4JFs/edit">9th Independent Reading Choice Project Mrs. Aletto- John  W. Casterline notes</a></li>
     <li><a href="https://boredom-hub-v2.vercel.app/">Boredom Hub</a></li>
-</ul>{text-align: center;}</p></center>
+    </ul></p>
+    </center>
+    </div>
 
 </body>
 </html>
