--- a/Information/partners.html
+++ b/Information/partners.html
@@ -23,12 +23,12 @@
     </div>
 
 <div>
-  <h1 style="text-align: center;">Partners</h1>
-  <p style="text-align: center;">
+  <h1 style="text-align: left; margin-left: 20px;">Partners</h1>
+  <p style="margin-left: 20px;">
     <ul>
-      <li><a href="https://docs.google.com/document/d/1ix9IhNoRGtXVx01Gr9sHXHeJN76wNzLcV7ygujgGs3I/edit?tab=t.ruabefcy9425" style="text-align: left;">Lunar (The Chat)</a></li>
-      <li><a href="https://docs.google.com/document/u/0/d/1HglxTUccNO7PPUPPtLnBzGx7Vp8n9w8d4Q0bXsm4JFs/edit" style="text-align: left;">9th Independent Reading Choice Project Mrs. Aletto- John W. Casterline notes</a></li>
-      <li><a href="https://boredom-hub-v2.vercel.app/" style="text-align: left;">Boredom Hub</a></li>
+      <li><a href="https://docs.google.com/document/d/1ix9IhNoRGtXVx01Gr9sHXHeJN76wNzLcV7ygujgGs3I/edit?tab=t.ruabefcy9425">Lunar (The Chat)</a></li>
+      <li><a href="https://docs.google.com/document/u/0/d/1HglxTUccNO7PPUPPtLnBzGx7Vp8n9w8d4Q0bXsm4JFs/edit">9th Independent Reading Choice Project Mrs. Aletto- John W. Casterline notes</a></li>
+      <li><a href="https://boredom-hub-v2.vercel.app/">Boredom Hub</a></li>
     </ul>
   </p>
 </div>
