--- a/Resources/reports.html
+++ b/Resources/reports.html
@@ -15,8 +15,8 @@
             <li><a href="resources.html">Resources</a></li>
             <li><a href="Resources/updates.html">Updates</a></li>
             <li><a href="Resources/schedule.html">Schedule</a></li>
-            <li><a href="Resources/suggestions.html">Suggestions</a></li>
-            <li><a href="Resources/reports.html">Reports</a></li>
+            <li><a href="suggestions.html">Suggestions</a></li>
+            <li><a href="reports.html">Reports</a></li>
             <li><a href="Resources/rankapplications.html">Rank Applications</a></li>
         </ul>
     </div>
