--- a/Resources/schedule.html
+++ b/Resources/schedule.html
@@ -12,11 +12,11 @@
         <ul>
             <li><a href="home.html">Back to Home</a></li>
             <li><a href="resources.html">Resources</a></li>
-            <li><a href="Resources/updates.html">Updates</a></li>
-            <li><a href="Resources/schedule.html">Schedule</a></li>
-            <li><a href="Resources/suggestions.html">Suggestions</a></li>
-            <li><a href="Resources/reports.html">Reports</a></li>
-            <li><a href="Resources/rankapplications.html">Rank Applications</a></li>
+            <li><a href="updates.html">Updates</a></li>
+            <li><a href="schedule.html">Schedule</a></li>
+            <li><a href="suggestions.html">Suggestions</a></li>
+            <li><a href="reports.html">Reports</a></li>
+            <li><a href="rankapplications.html">Rank Applications</a></li>
         </ul>
     </div>
     
