--- a/Resources/suggestions.html
+++ b/Resources/suggestions.html
@@ -27,7 +27,7 @@
             <p>We'd love to hear your suggestions! Please fill out the form below:</p>
 
 
-            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeCVoqvEkdjQpaZwM6P56qWHeEh-kDUPyPpaxLjydFpQ1o_QA/viewform?embedded=true" 
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScFRM9V3CdbDMzi4M4XzszjGk4raFTbrqr7H-2QwxZXgdxynQ/viewform?usp=header" 
                     width="640" height="554" frameborder="0" marginheight="0" marginwidth="0">
                 Loading…
             </iframe>
