--- a/Information/partners.html
+++ b/Information/partners.html
@@ -22,18 +22,13 @@
         </ul>
     </div>
 
-<div style="display: flex; justify-content: center; width: 100%;">
-  <div>
-    <h1 style="text-align: center;">Partners</h1>
-    <p>
-      <ul>
-        <li><a href="https://docs.google.com/document/d/1ix9IhNoRGtXVx01Gr9sHXHeJN76wNzLcV7ygujgGs3I/edit?tab=t.ruabefcy9425">Lunar (The Chat)</a></li>
-        <li><a href="https://docs.google.com/document/u/0/d/1HglxTUccNO7PPUPPtLnBzGx7Vp8n9w8d4Q0bXsm4JFs/edit">9th Independent Reading Choice Project Mrs. Aletto- John W. Casterline notes</a></li>
-        <li><a href="https://boredom-hub-v2.vercel.app/">Boredom Hub</a></li>
-      </ul>
-    </p>
+    <div id="content">
+        <section>
+            <h1>Partners</h1>
+            <a href="https://docs.google.com/document/d/1ix9IhNoRGtXVx01Gr9sHXHeJN76wNzLcV7ygujgGs3I/edit?tab=t.ruabefcy9425">Lunar (The Chat)</a></li>
+            <a href="https://docs.google.com/document/u/0/d/1HglxTUccNO7PPUPPtLnBzGx7Vp8n9w8d4Q0bXsm4JFs/edit">9th Independent Reading Choice Project Mrs. Aletto- John W. Casterline notes</a></li>
+            <a href="https://boredom-hub-v2.vercel.app/">Boredom Hub</a></li>
   </div>
-</div>
 
 </body>
 </html>
