--- a/resources.html
+++ b/resources.html
@@ -21,5 +21,7 @@
             <li><a href="rankapplications.html">Rank Applications</a></li>
         </ul>
     </div>
+    <h1>Resources</h1>
+    <p>Use the Sidebar to navigate between Resources</p>
 </body>
 </html>
