--- a/resources.html
+++ b/resources.html
@@ -8,8 +8,6 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-<h1>Resources</h1>
-    <p>Use the Sidebar to navigate between Resources</p>
         <div id="sidebar">
         <ul>
             <li><a href="home.html">Back to Home</a></li>
@@ -22,6 +20,6 @@
         </ul>
     </div>
     <h1>Resources</h1>
-    <p>Use the Sidebar to navigate between Resources</p>
+    <p>Please Use the Sidebar to Navigate Between Resources</p>
 </body>
 </html>
