--- a/resources.html
+++ b/resources.html
@@ -19,7 +19,11 @@
             <li><a href="rankapplications.html">Rank Applications</a></li>
         </ul>
     </div>
-    <h1>Resources</h1>
-    <p>Please Use the Sidebar to Navigate Between Resources</p>
+    <div is="content">
+        <section>
+             <h1>Resources</h1>
+             <p>Please Use the Sidebar to Navigate Between Resources</p>
+        </section>
+    </div>
 </body>
 </html>
