--- a/updates.html
+++ b/updates.html
@@ -23,7 +23,7 @@
     <div id="content">
         <section>
             <h1>Updates</h1>
-            <h2>Catsbedabest: Hello, this is where updates will be posted by the Devs<br>
+            <h2>Hello, this is where updates will be posted by the Devs<br>
             Updates will refresh every month<br>
             To see our Updates Archive, ask a staff member about the Blackout Doc</h2>
             <p>Catsbedabest: This is the final update of April-other than minr changes, we won't have another Major Update until May 15th<br>
