--- a/updates.html
+++ b/updates.html
@@ -26,7 +26,7 @@
             <h2>Hello, this is where updates will be posted by the Devs<br>
             Updates will refresh every month<br>
             To see our Updates Archive, ask a staff member about the Blackout Doc</h2>
-            <p>Catsbedabest: This is the final update of April-other than minr changes, we won't have another Major Update until May 15th<br>
+            <p>Catsbedabest: This is the final update of April-other than minor changes, we won't have another Major Update until May 15th<br>
             Catsbedabest: Polls may be coming soon on the site!
 </p>
         </section>
