--- a/schedule.html
+++ b/schedule.html
@@ -23,7 +23,17 @@
     <div id="content">
         <section>
             <h1>Schedule</h1>
-            <p>NOT YET IMPLEMENTED</p>
+            <h2>This is where you can see upcoming Events and Dates for Major Updates, Upcoming Releases, and New Site Updates</h2>
+            <p>April 30th: Links Page Major Update<br>
+               May 10th: Blackout Designs Contest<br>
+               May 20th: Store Opening<br>
+               August 18th: Blackout Public Announcement<br>
+               December 18th: Final Blackout Site Update<br>
+               December 24th: Blackout AI Release Date<br>
+               December 25th: Blackout Public Release<br>
+               December 25th: Vortex Partnership<br>
+               December 30th: Blackout Opening Event 
+</p>
         </section>
     </div>
 
