--- a/schedule.html
+++ b/schedule.html
@@ -26,7 +26,7 @@
             <h3>This is where you can see upcoming Events and Dates for Major Updates, Upcoming Releases, and New Site Updates</h3>
             <p>April 30th: Links Page Major Update<br>
                May 10th: Blackout Designs Contest<br>
-               May 15th: May Major Update
+               May 15th: May Major Update<br>
                May 20th: Store Opening<br>
                August 18th: Blackout Public Announcement<br>
                December 18th: Final Blackout Site Update<br>
