--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@
         </ul>
     </div>
 
-    <img class="logo-fixed" src="https://drive.google.com/file/d/1EzMRzUwWjxFYD_xbF9OxgQf8SHEwJjZB/view" alt="Logo">
+    <img class="logo-fixed" src="Future Websites.pdf" alt="Logo">
 
      
     <div id="content">
