--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@
         </ul>
     </div>
 
-    <img class="logo-fixed" src="Future Websites.pdf" alt="Logo">
+    <img src="Future Websites.pdf" class="logo-fixed" alt="Logo">
 
      
     <div id="content">
