--- a/ai.html
+++ b/ai.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blackout | AI</title>
     <link rel="stylesheet" href="styles.css">
+        <link rel="icon" type="image/x-icon" href="favicon.ico">
   <script id="embedai" src="https://embedai.thesamur.ai/embedai.js" data-id="blackout-ai"></script>
 </head>
 <body>
