Update and rename Information/partners.html to partners.html

--- a/partners.html
+++ b/partners.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blackout | BLANK</title>
+    <title>Blackout | Partners</title>
     <link rel="stylesheet" href="information.css">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
@@ -11,14 +11,13 @@
 
     <div id="sidebar">
         <ul>
-            <li><a href="home.html">Home</a></li>
-            <li><a href="updates.html">Updates</a></li>
-            <li><a href="schedule.html">Schedule</a></li>
-            <li><a href="suggestions.html">Suggestions</a></li>
-            <li><a href="newsletter.html">Newsletter</a></li>
-            <li><a href="links.html">Links</a></li>
-            <li><a href="ai.html">AI</a></li>
-            <li><a href="help.html">Help</a></li>
+            <li><a href="home.html">Back to Home</a></li>
+            <li><a href="information.html">Information</a></li>
+            <li><a href="partners.html">Partners</a></li>
+            <li><a href="seasons.html">Seasons</a></li>
+            <li><a href="ranks.html">Ranks</a></li>
+            <li><a href="punishments.html">Punishments</a></li>
+            <li><a href="FAQ.html">FAQ</a></li>
         </ul>
     </div>
 
