--- a/information.html
+++ b/information.html
@@ -14,11 +14,11 @@
         <ul>
             <li><a href="home.html">Back to Home</a></li>
             <li><a href="information.html">Information</a></li>
-            <li><a href="Information/partners.html">Partners</a></li>
-            <li><a href="Information/seasons.html">Seasons</a></li>
-            <li><a href="Information/ranks.html">Ranks</a></li>
-            <li><a href="Information/punishments.html">Punishments</a></li>
-            <li><a href="Information/FAQ.html">FAQ</a></li>
+            <li><a href="partners.html">Partners</a></li>
+            <li><a href="seasons.html">Seasons</a></li>
+            <li><a href="ranks.html">Ranks</a></li>
+            <li><a href="punishments.html">Punishments</a></li>
+            <li><a href="FAQ.html">FAQ</a></li>
         </ul>
     </div>
 </body>
