--- a/reports.html
+++ b/reports.html
@@ -20,11 +20,19 @@
             <li><a href="rankapplications.html">Rank Applications</a></li>
         </ul>
     </div>
+    <div id="content">
+        <section>
 
-    <h1>Report someone here</h1>
+            <h1>Report Someone Here</h1>
+            <p>If someone has been engaging in suspicious or inappropriate behavior make a Report! Please fill out the form below:</p>
 
-    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScy_sbqE1gSU952ZI_EQ7krEbuARL6K2RrCegVMIyWtfCN5fA/viewform?embedded=true" width="640" height="923" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScFRM9V3CdbDMzi4M4XzszjGk4raFTbrqr7H-2QwxZXgdxynQ/viewform?usp=header" 
+                    width="640" height="554" frameborder="0" marginheight="0" marginwidth="0">
+                Loading…
+            </iframe>
+        </section>
+    </div>
 
 </body>
 </html>
