--- a/rankapplications.html
+++ b/rankapplications.html
@@ -21,10 +21,20 @@
         </ul>
     </div>
 
-    <h1>Fill out an apllication for a higher rank here</h1>
+    <div id="content">
+        <section>
 
-    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf29cXvXls_Azlv9h29KDlzwkpfHiHTFvnqSkT0OpgDXM9wvQ/viewform?embedded=true" width="640" height="855" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+            <h1>Apply For a New Rank</h1>
+            <p>If you would like to apply for a new rank and become a staff member, do it here!</p>
 
 
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf29cXvXls_Azlv9h29KDlzwkpfHiHTFvnqSkT0OpgDXM9wvQ/viewform?usp=header" 
+                    width="640" height="554" frameborder="0" marginheight="0" marginwidth="0">
+                Loading…
+            </iframe>
+        </section>
+    </div>
+
+    
 </body>
 </html>
