--- a/Information/ranks.html
+++ b/Information/ranks.html
@@ -11,40 +11,42 @@
 
     <div id="sidebar">
         <ul>
-            <li><a href="home.html">Home</a></li>
-            <li><a href="updates.html">Updates</a></li>
-            <li><a href="schedule.html">Schedule</a></li>
-            <li><a href="suggestions.html">Suggestions</a></li>
-            <li><a href="newsletter.html">Newsletter</a></li>
-            <li><a href="links.html">Links</a></li>
-            <li><a href="ai.html">AI</a></li>
-            <li><a href="help.html">Help</a></li>
+            <li><a href="home.html">Back to Home</a></li>
+            <li><a href="information.html">Information</a></li>
+            <li><a href="partners.html">Partners</a></li>
+            <li><a href="seasons.html">Seasons</a></li>
+            <li><a href="ranks.html">Ranks</a></li>
+            <li><a href="punishments.html">Punishments</a></li>
+            <li><a href="FAQ.html">FAQ</a></li>
         </ul>
     </div>
 
-    <p> Owner-Catsbedabest
-        Owner-Thedogdude
-        Design Developers
-        Content Developers
-        Chat Security Monitors
-        Suggestions/Invites Monitors
-        Github Game Designers
-        Link Finders
-        Head Coders
-        Newsletter writers
-        Junior Developers
-        Junior Security Monitors
-        Junior Suggestion Monitors
-        Junior Game Designers
-        Junior Link Finders
-        Junior Coders
-        Junior Writers
-        OG Member-All members who join before the end of 2025
-        Premium Member-normal members who have contributed to the site in some way, such as coding or multiple good suggestions, as well as contributing vortex credits or money to the devs
-        Member-All other members
-        Muted-Members set in viewing or commenting for bad behavior
-        </p>
 
+    <div id="content">
+        <section>
+            <h1>Ranks</h1>
+            <p>Here you can see all of the ranks, which you can apply for in the Staff Applications form</p>
+    <p> Owner-Catsbedabest<br>
+        Owner-Thedogdude<br>
+        Design Developers<br>
+        Content Developers<br>
+        Chat Security Monitors<br>
+        Suggestions/Invites Monitors<br>
+        Github Game Designers<br>
+        Link Finders<br>
+        Assistant Developers<br>
+        Assistant Security Monitors<br>
+        Assistant Suggestion Monitors<br>
+        Assistant Game Designers<br>
+        Assistant Link Finders<br>
+        Assistant Coders-Given acesss to the code, like devs<br>
+        OG Member-All members who join before the end of 2025<br>
+        Premium Member-normal members who have contributed to the site or payed<br>
+        Member
+        Muted
+        </p>
+        </section>
+    </div>
 
 </body>
 </html>
