--- a/updates.html
+++ b/updates.html
@@ -29,6 +29,7 @@
             To see our Updates Archive, ask a staff member about the Blackout Doc</h3>
             <p>Catsbedabest: This is the final update of April-other than minor changes, we won't have another Major Update until May 15th<br>
             Catsbedabest: Polls may be coming soon on the site!
+            Catsbedaest: You now can view the Ranks, and what you can sign up for on the Staff Applications form
 </p>
         </section>
     </div>
