--- a/resources.html
+++ b/resources.html
@@ -19,11 +19,12 @@
             <li><a href="rankapplications.html">Rank Applications</a></li>
         </ul>
     </div>
-    <div is="content">
+        <div id="content">
         <section>
-             <h1>Resources</h1>
-             <p>Please Use the Sidebar to Navigate Between Resources</p>
+            <h1>Resources</h1>
+            <h3>Please use the Sidebar to navigate between different Resources</h3>
         </section>
     </div>
+
 </body>
 </html>
