--- a/information.html
+++ b/information.html
@@ -8,8 +8,6 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-<h1>Information</h1>
-    <p>Use the Sidebar to navigate between Blakout Information</p>
         <div id="sidebar">
         <ul>
             <li><a href="home.html">Back to Home</a></li>
@@ -20,6 +18,12 @@
             <li><a href="punishments.html">Punishments</a></li>
             <li><a href="FAQ.html">FAQ</a></li>
         </ul>
+    </div>
+            <div id="content">
+        <section>
+            <h1>Information</h1>
+            <h3>Please use the Sidebar to navigate between different Blackout Info Sheets</h3>
+        </section>
     </div>
 </body>
 </html>
