--- a/information.html
+++ b/information.html
@@ -22,7 +22,7 @@
         <div id="content">
         <section>
             <h1>Information</h1>
-            <h3>Please use the Sidebar to navigate between different Blackout Info Sheets</h3>
+            <p>Please use the Sidebar to navigate between different Blackout Info Sheets</p>
         </section>
     </div>
     
