--- a/resources.html
+++ b/resources.html
@@ -22,7 +22,7 @@
         <div id="content">
         <section>
             <h1>Resources</h1>
-            <h3>Please use the Sidebar to navigate between different Blackout Resources</h3>
+            <p>Please use the Sidebar to navigate between different Blackout Resources</p>
         </section>
     </div>
 
