--- a/links.html
+++ b/links.html
@@ -54,7 +54,7 @@
 
     <div id="content">
         <section>
-            <h1>Updates</h1>
+            <h1>Links</h1>
 
             <div class="checkbox-container">
                 <p class="switch-text">Open Links in about:blank</p>
