--- a/help.html
+++ b/help.html
@@ -21,8 +21,10 @@
     </div>
     <div id="content">
         <h1>Help</h1>
-        <p>You can contact us via email or ask an ai chatbot for assistance.</p>
-        <a href="mailto:857624@dpsk12.net,878417@dpsk12.net?subject=Blackout Assistance">Contact Us</a>
+        <p>You can contact us via email, ask staff, make a Report or Suggestion, or ask Blackout AI (bottom-right) for assistance</p>
+        <a href="mailto:857624@dpsk12.net,878417@dpsk12.net?subject=Blackout Assistance">Contact Us</a><br>
+        <a href="suggestions.html">Suggestions</a><br>
+        <a href="reports.html">Reports</a>
     </div>
     <script
     chatbot_id="67d6004e3dfe9893ec64a0a3"
