--- a/ai.html
+++ b/ai.html
@@ -6,8 +6,7 @@
     <title>Blackout | AI</title>
     <link rel="stylesheet" href="styles.css">
         <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <script id="embedai" src="https://embedai.thesamur.ai/embedai.js" data-id="blackout-ai"></script>
-</head>
+<script id="embedai" src="https://embedai.thesamur.ai/embedai.js" data-id="blackout-ai-vaTtCKoI"></script></head>
 <body>
 
 
