--- a/blank.html
+++ b/blank.html
@@ -12,10 +12,8 @@
     <div id="sidebar">
         <ul>
             <li><a href="home.html">Home</a></li>
-            <li><a href="updates.html">Updates</a></li>
-            <li><a href="schedule.html">Schedule</a></li>
-            <li><a href="suggestions.html">Suggestions</a></li>
-            <li><a href="newsletter.html">Newsletter</a></li>
+            <li><a href="resources.html">Resources</a></li>
+            <li><a href="information.html">Information</a></li>
             <li><a href="links.html">Links</a></li>
             <li><a href="ai.html">AI</a></li>
             <li><a href="help.html">Help</a></li>
