--- a/home.html
+++ b/home.html
@@ -45,6 +45,18 @@
     });
 </script>
 
+            
+<script>
+  function checkName() {
+    const input = document.getElementById('nameInput').value.trim();
+    if (input === "Will") {
+      window.location.href = "birthday.html";
+    } else {
+      alert("Nice Try Loser");
+    }
+  }
+</script>
+            
         </section>
     </div>
 
