--- a/birthday.html
+++ b/birthday.html
@@ -1,1 +1,30 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Blackout | Birthday</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+</head>
+<body>
 
+    <div id="sidebar">
+        <ul>
+            <li><a href="home.html">Home</a></li>
+            <li><a href="resources.html">Resources</a></li>
+            <li><a href="information.html">Information</a></li>
+            <li><a href="links.html">Links</a></li>
+            <li><a href="ai.html">AI</a></li>
+            <li><a href="help.html">Help</a></li>
+        </ul>
+    </div>
+
+<hi> Happy Birthday, Will</hi>
+  <p>Juust wanted to wish you a happy birthday</p>
+
+
+
+  
+</body>
+</html>
