--- a/home.html
+++ b/home.html
@@ -32,7 +32,7 @@
             <a href="chat.html" class="link">Chat</a><br>
             <p>Here is the Unblocked File to Blackout-updated mothly, it can be out-of-date</p>
             <a  href="Blackout-main (2).zip" download>Download File</a><br><br>
-            <a Due to Blocksi, most of the development of Blackout is paused until summer. <a <br>
+            <p>Due to Blocksi, most of the development of Blackout is paused until summer.</p><br>
             <button id="admin-btn">Admin Panel</button>
 
 <script>
