--- a/ai.html
+++ b/ai.html
@@ -26,7 +26,7 @@
         <section>
             <h2>AI CHATBOT(BETA)</h2>
             <iframe src="https://chatgpt.com" width="800" height="600"></iframe>
-            <p>Note we will add our own bot once in is complete, which we HOPE will be soon. (I'm talking to you Wade)</p>
+            <p>Due to lack of time or experience we have not been able to complete our own AI for the time being. <br>We are aware that this does not work, and we are in the process of fixing it. <br>Please note that we have a faily useless bot on the Help page, if you are truly desperate </p>
         </section>
     </div>
 
